[fix] horizontal scroll and style order

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,11 @@
 /* Variables */
+
 :root {
   --header-heigh: 40px;
-  /* --image-height: 648px; */
 }
 
 /*  common css */
+
 * {
   box-sizing: border-box;
 }
@@ -23,7 +24,7 @@
 }
 
 .content-wide {
-  width: 40%;
+  width: 40vw;
   max-width: 100%;
   margin: auto;
 }
@@ -33,24 +34,25 @@
 }
 
 /* page header */
+
 .header {
-  background-color: white;
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
-  padding: 5px 20px;
-  border-bottom: 1px solid #ccc;
+  left: 0;
   z-index: 1000;
+  padding: 5px 20px;
+  background-color: white;
+  border-bottom: 1px solid #ccc;
 }
 
 .header-title {
-  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 1.4rem;
   font-weight: bold;
   line-height: var(--header-heigh);
+  text-align: center;
   vertical-align: middle;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .header-navigation {
@@ -58,10 +60,10 @@
   text-transform: uppercase;
 }
 
-.header-navigation>* {
+.header-navigation > * {
   display: inline-block;
-  margin: 0 5px;
   height: 100%;
+  margin: 0 5px;
 }
 
 .header-navigation.left-floated {
@@ -69,15 +71,15 @@
 }
 
 .navigation-button {
-  background-color: rgb(98, 136, 165);
-  color: white;
   height: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  border-radius: 5px;
-  outline: none;
   padding: 0 15px;
   margin-right: 0;
   font-weight: bold;
+  color: white;
+  background-color: #6288a5;
+  border: 1px solid rgba(0,0,0,.8);
+  border-radius: 5px;
+  outline: none;
 }
 
 .main-header-section {
@@ -87,11 +89,11 @@
 
 .main-title {
   width: 600px;
-  margin: auto;
-  font-size: 3rem;
   padding: 20px 20px 20px 100px;
-  font-weight: bold;
+  margin: auto;
   font-family: cursive;
+  font-size: 3rem;
+  font-weight: bold;
   text-align: left;
 }
 
@@ -105,15 +107,15 @@
 }
 
 .main-header-image figcaption {
-  color: grey;
   font-size: 1em;
+  color: grey;
   text-align: left;
 }
 
 .main-header-image figcaption sub {
-  color: silver;
-  font-size: 14px;
   padding-top: 4px;
+  font-size: 14px;
+  color: silver;
 }
 
 .meta {
@@ -121,10 +123,10 @@
 }
 
 .meta .author {
-  text-align: left;
-  font-weight: bold;
-  font-size: 14px;
   margin: 5px 5px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: left;
 }
 
 .meta .actions .action-item {
@@ -137,53 +139,53 @@
 }
 
 .meta .date {
+  font-size: 14px;
   line-height: 35px;
   color: grey;
-  font-size: 14px;
 }
 
 .main-container {
-  clear: both;
   padding-top: 20px;
+  clear: both;
 }
 
 .main-container aside {
   position: relative;
-  width: 30vw;
-  padding: 20px;
   float: right;
-  height: 100%;
+  width: 30vw;
+}
 
-
+.first-side-item,
+.second-side-item {
+  left: 0;
+  right: 0;
 }
 
 .main-container .first-side-item {
   position: absolute;
   top: 700px;
-  padding: 30px;
   width: 100%;
+  padding: 30px;
 }
 
 .main-container .second-side-item {
   position: absolute;
   top: 1300px;
-  padding: 0 20px;
   width: 100%;
 }
 
 .editor-side-item {
-  clear: left
+  clear: left;
 }
 
 .editor-side-image {
-  width: 100px;
   float: left;
+  width: 100px;
   margin-right: 5px;
 }
 
 .editor-side-image img {
   width: 100%;
-
 }
 
 .editor-note {
@@ -191,35 +193,33 @@
 }
 
 .side-item-container {
-  width: 60%;
+  width: 300px;
+  max-width: 100%;
   margin: auto;
-  max-width: 350px;
-  min-width: 280px;
 }
 
 .second-side-item h3 {
+  margin-bottom: 5px;
   font-size: 20px;
   font-weight: bold;
   text-align: left;
-  margin-bottom: 5px;
-
 }
 
 .second-side-item p {
+  padding: 20px 0;
   font-size: 14;
   color: silver;
-  padding: 20px 0;
 }
 
 .second-side-item button {
-  background-color: rgb(98, 136, 165);
-  color: white;
-  height: 40px;
   width: 100%;
-  border-radius: 5px;
-  outline: none;
+  height: 40px;
   padding: 0 50px;
   font-weight: bold;
+  color: white;
+  background-color: #6288a5;
+  border-radius: 5px;
+  outline: none;
 }
 
 .main-container h3 {
@@ -229,17 +229,17 @@
 }
 
 /* the image is larger than the container even in the original site, we are just matching the example hence 120% */
+
 .example-image img {
   width: 100%;
 }
 
- /*The style below => This is the way the site is layedout with the images */
-/* 
+/*The style below => This is the way the site is layedout with the images */
+
+/*
 .example-image img {
   width: 120%;
 } */
-
-
 
 .example-image {
   position: relative;
@@ -247,24 +247,24 @@
 
 .example-image .image-description {
   display: inline-block;
-  vertical-align: top;
   width: 24%;
-  font-size: 10px;
-  margin: 0;
-  box-sizing: border-box;
   padding: 0 5px;
+  margin: 0;
+  font-size: 10px;
+  vertical-align: top;
+  box-sizing: border-box;
 }
 
 .image-description-container {
   position: absolute;
-  width: 100%;
   top: 20%;
+  width: 100%;
 }
 
 .image-description-container.second {
   position: absolute;
-  width: 100%;
   top: 70%;
+  width: 100%;
 }
 
 .video {
@@ -304,14 +304,13 @@
 }
 
 .article-footer button {
-  /* float: left; */
-  background-color: rgb(98, 136, 165);
-  color: white;
   height: 40px;
-  border-radius: 5px;
-  outline: none;
   padding: 0 50px;
   font-weight: bold;
+  color: white;
+  background-color: #6288a5;
+  border-radius: 5px;
+  outline: none;
 }
 
 .article-footer ul {
@@ -320,27 +319,25 @@
 
 .article-footer ul li {
   display: inline-block;
-  padding: 0 5px;
-  text-align: center;
-  line-height: 30px;
-  height: 30px;
   width: 30px;
+  height: 30px;
+  padding: 0 5px;
+  line-height: 30px;
+  text-align: center;
 }
 
-.page-footer{
-  background-color:whitesmoke;
-  /* height: 40px; */
+.page-footer {
+  background-color: whitesmoke;
 }
 
-.page-footer .page-footer-container{
+.page-footer .page-footer-container {
   width: 100%;
   max-width: 1000px;
-  margin: auto;
   padding: 20px;
+  margin: auto;
   text-align: center;
-
 }
 
-.page-footer .page-footer-container a{
+.page-footer .page-footer-container a {
   float: right;
 }
